--- a/styles/style.css
+++ b/styles/style.css
@@ -103,6 +103,33 @@ header .main-nav li a {
 	font-weight:600;
 	letter-spacing:2px;
 }
+header .main-nav li a.specialbtn {
+	color:#FFF;
+	background-color: firebrick;
+	font-size:10px;
+	text-transform:uppercase;
+	font-weight:600;
+	letter-spacing:2px;
+	block-size: 5px;
+}
+header .main-nav li a.specialbtn:hover {
+	color:#FFF;
+	background-color: deepskyblue;
+	font-size:10px;
+	text-transform:uppercase;
+	font-weight:600;
+	letter-spacing:2px;
+}
+
+header .main-nav li a.specialbtn-active {
+	color:#FFF;
+	background-color: firebrick;
+	font-size:10px;
+	text-transform:uppercase;
+	font-weight:600;
+	letter-spacing:2px;
+}
+
 header .main-nav li a:hover, header .main-nav li a.active {
 	color:#666;
 }
@@ -305,6 +332,82 @@ footer .copyright a:hover {
 	background:url("../images/bgwork.png");
 	background-size:cover;
 }
+
+/* Customize */
+
+/* List style */
+ul.a {
+	list-style-type: circle;
+}
+ul.b {
+	list-style-type: disc;
+}
+ul.c {
+	list-style-type: square;
+}
+ol.d {
+	list-style-type: armenian;
+}
+ol.e {
+	list-style-type: cjk-ideographic;
+}
+ol.f {
+	list-style-type: decimal;
+}
+ol.g {
+	list-style-type: decimal-leading-zero;
+}
+ol.h {
+	list-style-type: georgian;
+}
+ol.i {
+	list-style-type: hebrew;
+}
+ol.j {
+	list-style-type: hiragana;
+}
+ol.k {
+	list-style-type: hiragana-iroha;
+}
+ol.l {
+	list-style-type: katakana;
+}
+ol.m {
+	list-style-type: katakana-iroha;
+}
+ol.n {
+	list-style-type: lower-alpha;
+}
+ol.o {
+	list-style-type: lower-greek;
+}
+ol.p {
+	list-style-type: lower-latin;
+}
+ol.q {
+	list-style-type: lower-roman;
+}
+ol.r {
+	list-style-type: upper-alpha;
+}
+ol.s {
+	list-style-type: upper-greek;
+}
+ol.t {
+	list-style-type: upper-latin;
+}
+ol.u {
+	list-style-type: upper-roman;
+}
+ol.v {
+	list-style-type: none;
+}
+ol.w {
+	list-style-type: inherit;
+}
+
+/* End of Customization */
+
 @media handheld and (max-width:480px), screen and (max-device-width:480px), screen and (max-width:767px) {
 body {
 	padding:0;
@@ -358,4 +461,7 @@ div.one-third, div.one-fourth, .copyright {
 #main-content .text-intro h2 {
 	font-size:30px;
 }
+
+
+
 }
