--- a/styles/style.css
+++ b/styles/style.css
@@ -1,4 +1,5 @@
 @import url(https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700);
+@import url('liststyle.css');
 html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, b, u, i, center, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td, article, aside, canvas, details, figcaption, figure, footer, header, hgroup, menu, nav, section, summary, time, mark, audio, video {
 	margin:0;
 	padding:0
@@ -352,78 +353,6 @@ footer .copyright a:hover {
 
 /* Customize */
 
-/* List style */
-ul.a {
-	list-style-type: circle;
-}
-ul.b {
-	list-style-type: disc;
-}
-ul.c {
-	list-style-type: square;
-}
-ol.d {
-	list-style-type: armenian;
-}
-ol.e {
-	list-style-type: cjk-ideographic;
-}
-ol.f {
-	list-style-type: decimal;
-}
-ol.g {
-	list-style-type: decimal-leading-zero;
-}
-ol.h {
-	list-style-type: georgian;
-}
-ol.i {
-	list-style-type: hebrew;
-}
-ol.j {
-	list-style-type: hiragana;
-}
-ol.k {
-	list-style-type: hiragana-iroha;
-}
-ol.l {
-	list-style-type: katakana;
-}
-ol.m {
-	list-style-type: katakana-iroha;
-}
-ol.n {
-	list-style-type: lower-alpha;
-}
-ol.o {
-	list-style-type: lower-greek;
-}
-ol.p {
-	list-style-type: lower-latin;
-}
-ol.q {
-	list-style-type: lower-roman;
-}
-ol.r {
-	list-style-type: upper-alpha;
-}
-ol.s {
-	list-style-type: upper-greek;
-}
-ol.t {
-	list-style-type: upper-latin;
-}
-ol.u {
-	list-style-type: upper-roman;
-}
-ol.v {
-	list-style-type: none;
-}
-ol.w {
-	list-style-type: inherit;
-}
-
-/* End of Customization */
 
 @media handheld and (max-width:480px), screen and (max-device-width:480px), screen and (max-width:767px) {
 body {
