--- a/styles/style.css
+++ b/styles/style.css
@@ -9,6 +9,8 @@ article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, 
 	display: block
 }
 
+/* px to rem 환산: px * 0.0625 */
+
 table {
 	border-collapse: collapse;
 	border-spacing: 0
@@ -52,8 +54,8 @@ abbr, acronym {
 
 body {
 	font-family: "Open Sans", sans-serif;
-	font-size: 13px;
-	line-height: 22px;
+	font-size: 1rem;
+	line-height: 2.2rem;
 	color: #444444;
 	padding: 0;
 }
@@ -68,7 +70,7 @@ a:hover {
 }
 
 h1, h2, h3, h4, h5, h6, p {
-	margin-bottom: 10px;
+	margin-bottom: 0.625rem;
 }
 
 h1, h2, h3, h4, h5, h6 {
@@ -76,7 +78,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 h1 {
-	font-size: 30px;
+	font-size: 3rem;
 	line-height: 1.7em;
 }
 
@@ -85,7 +87,7 @@ h2 {
 }
 
 h3 {
-	font-size: 22px;
+	font-size: 2rem;
 	line-height: 1.3em;
 }
 
@@ -95,26 +97,28 @@ img {
 
 .more {
 	background: url("../images/arrow.gif") no-repeat right 50%;
-	padding-right: 20px;
+	padding-right: 1.5rem;
 }
 
 #main-content, footer {
 	margin: 0 auto;
-	max-width: 950px;
+	max-width: 65rem;
 }
 
 header {
 	margin-top: 0;
 	width: 100%;
-	height: 45px;
-	margin-bottom: 30px;
+	height: 3.125rem;
+	margin-bottom: 0rem;
 	background: #1D1D1D;
 	position: fixed;
 	z-index: 999;
 }
 
 header .main-nav {
-	margin-top: 10px;
+	margin-top: 0rem;
+	vertical-align: middle;
+	height: 100%;
 	float: right;
 }
 
@@ -125,66 +129,123 @@ header .logo-area {
 	vertical-align: top;
 	width: 50px;
 	height: 50px;
-	margin-right: 20px;
-	margin-top: 0px;
-	margin-left: 10px;
+	margin-right: 0rem;
+	margin-top: 0rem;
+	margin-left: 0.7rem;
 }
 
-header .main-nav li {
-	display: inline-block;
-	margin-right: 40px;
+
+header .main-nav ul {
+	height: 100%;
+	text-align: middle;
+	/* padding-left: 40px; */
+	display: table;
+}
+
+header .main-nav ul li {
+	padding: 0;
+	display: inline;
+	/* padding-right: 40px; */
 	list-style: none;
+	display: table-cell;
+	background-color: rgb(53, 53, 53);
+	padding-left: 1.5rem;
+	padding-right: 1.5rem;
+	text-align: center;
+	
 }
 
-header .main-nav li a {
-	color: #FFF;
-	font-size: 10px;
-	text-transform: uppercase;
-	font-weight: 600;
-	letter-spacing: 2px;
-}
-
-header .main-nav li a.specialbtn {
-	color: #FFF;
+header .main-nav ul #recruiting {
 	background-color: firebrick;
-	font-size: 10px;
+}
+
+
+
+/* header .main-nav .icon-wrapper {
+	width: 100%;
+} */
+
+/* header .main-nav ul li{
+	padding: 0px 0px;
+	margin-top: 0px;
+	margin-bottom: 0px;
+	height: 100%;
+	
+
+} */
+
+header .main-nav a {
+	line-height: 50px;
+	color: #FFF;
+	font-size: 0.8rem;
 	text-transform: uppercase;
 	font-weight: 600;
-	letter-spacing: 2px;
+	letter-spacing: 0.15rem;
+	vertical-align: middle;
+}
+
+header .main-nav .nav-icons {
+	width: 100%;
+}
+
+header .main-nav a.specialbtn {
+	color: #fff;
+	/* font-size: 10px; */
+	text-transform: uppercase;
+	font-weight: 600;
+	letter-spacing: 0.15rem;
 }
 
 header .main-nav li a.specialbtn:hover {
 	color: #FFF;
-	background-color: deepskyblue;
-	font-size: 10px;
+	/* background-color: deepskyblue; */
+	/* font-size: 10px; */
 	text-transform: uppercase;
 	font-weight: 600;
-	letter-spacing: 2px;
+	letter-spacing: 0.15rem;
 }
 
 header .main-nav li a.specialbtn-active {
-	color: #FFF;
-	background-color: firebrick;
-	font-size: 10px;
+	color: #fff;
+	/* font-size: 10px; */
 	text-transform: uppercase;
 	font-weight: 600;
-	letter-spacing: 2px;
+	letter-spacing: 0.15rem;
 }
 
 header .main-nav li a:hover, header .main-nav li a.active {
 	color: #666;
 }
 
+.video-container {
+	position: relative;
+	padding-bottom: 56.25%;
+	padding-top: 0rem;
+	width: 100%;
+	height: auto;
+	margin-bottom: 1rem;
+}
+
+.video-container iframe {
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+}
+
+
+
 #main-content .text-intro {
 	border-bottom: 1px solid #e5e4e4;
 	float: left;
 	width: 100%;
-	padding: 25px 0;
-	margin-bottom: 40px;
+	padding: 1.8rem 0;
+	margin-bottom: 3rem;
 }
 
 #main-content .text-intro h2 {
-	font-size: 40px;
+	font-size: 2.5rem;
 	color: #606060;
 	text-align: center;
 }
@@ -237,7 +298,7 @@ div.img-second {
 
 div.img-first, div.img-second {
 	transition: all 1s ease-in-out;
-	padding-bottom: 30px;
+	padding-bottom: 1.875rem;
 }
 
 div.img-first:hover, div.img-second:hover {
@@ -247,18 +308,18 @@ div.img-first:hover, div.img-second:hover {
 #main-content .features, #main-content .portfolio {
 	clear: both;
 	float: left;
-	margin-bottom: 50px;
+	margin-bottom: 3.125rem;
 }
 
 footer {
 	clear: both;
 	border-top: 1px solid #e5e4e4;
-	padding: 20px 0;
+	padding: 1.25rem 0;
 }
 
 footer .copyright {
 	float: left;
-	margin-bottom: 30px;
+	margin-bottom: 1.875rem;
 }
 
 footer .copyright a {
@@ -273,19 +334,20 @@ footer .copyright a:hover {
 #home-head {
 	content: "";
 	display: block;
-	min-height: 200px;
+	min-height: 12.5rem;
 	width: 100%;
 	text-align: center;
 	box-shadow: inset 0 -1px 5px rgba(0, 0, 0, 0.6);
 }
 
 #home-head h1 {
-	font-size: 34px;
+	font-size: 4rem;
 	color: #fff;
 	line-height: 0.879em;
 	text-shadow: 0 1px 2px rgba(0, 0, 0, 0.4);
 	text-transform: uppercase;
-	padding-top: 100px;
+	padding-top: 6.125rem;
+	padding-bottom: 2rem;
 }
 
 #home-head h1 span {
@@ -296,27 +358,27 @@ footer .copyright a:hover {
 #video {
 	content: "";
 	display: block;
-	min-height: 300px;
+	min-height: 18.75rem;
 	width: 100%;
 	text-align: center;
 	box-shadow: inset 0 -1px 5px rgba(0, 0, 0, 0.6);
 }
 
 #video h1 {
-	font-size: 64px;
+	font-size: 4rem;
 	color: #fff;
 	line-height: 0.879em;
 	text-shadow: 0 1px 2px rgba(0, 0, 0, 0.4);
 	text-transform: uppercase;
-	padding-bottom: 20px;
-	padding-top: 120px;
+	padding-bottom: 1.25rem;
+	padding-top: 7.5rem;
 }
 
 #video h2 {
-	font-size: 13px;
+	font-size: 0.8125rem;
 	color: #FFF;
 	line-height: 1em;
-	letter-spacing: 2px;
+	letter-spacing: 0.125rem;
 	text-transform: uppercase;
 }
 
@@ -410,13 +472,29 @@ footer .copyright a:hover {
 
 /* Customize */
 
-@media handheld and (max-width:480px), screen and (max-device-width:480px), screen and (max-width:767px) {
+@media handheld and (max-width:765px), screen and (max-device-width:765), screen and (max-width:767px) {
 	body {
 		padding: 0;
+		text-align: center;
 	}
+	header .main-nav ul li {
+		padding: 0;
+		display: inline;
+		/* padding-right: 40px; */
+		list-style: none;
+		display: table-cell;
+		background-color: rgb(53, 53, 53);
+		padding-left: 0px;
+		padding-right: 0px;
+		text-align: center;
+		line-height: auto;
+
+		
+	}
+
 }
 
-@media handheld and (max-width:479px), screen and (max-device-width:479px), screen and (max-width:479px) {
+@media handheld and (max-width:765px), screen and (max-device-width:765px), screen and (max-width:765px) {
 	#contact-form .text-input {
 		float: left;
 	}
@@ -425,7 +503,7 @@ footer .copyright a:hover {
 		position: relative;
 	}
 	#home-head {
-		min-height: 250px;
+		min-height: 15.625rem;
 	}
 	header .main-nav {
 		width: 100%;
@@ -433,22 +511,57 @@ footer .copyright a:hover {
 	}
 	header .main-nav ul {
 		width: 100%;
+		height: 100%;
+		vertical-align: middle;
 	}
 	header .main-nav ul li, header .main-nav ul>li.last {
 		display: block;
 		float: none;
 		text-align: center;
+		line-height: auto;
 		width: 100%;
 	}
 	header .main-nav ul li a {
-		padding: 4px 0;
+		line-height: 1.5rem;
+		padding: 0px 0;
 		background: #e4e4e4;
 		display: block;
-		margin-bottom: 4px;
+		margin-bottom: 0px;
 	}
-	div.columns {
-		width: 100%;
+
+	header .main-nav a.specialbtn {
+		background-color: firebrick;
+		color: #fff;
+		/* font-size: 10px; */
+		text-transform: uppercase;
+		font-weight: 600;
+		letter-spacing: 0.15rem;
 	}
+	
+	header .main-nav li a.specialbtn:hover {
+		color: #FFF;
+		/* background-color: deepskyblue; */
+		/* font-size: 10px; */
+		text-transform: uppercase;
+		font-weight: 600;
+		letter-spacing: 0.15rem;
+	}
+	
+	header .main-nav li a.specialbtn-active {
+		color: #fff;
+		background-color: firebrick;
+		/* font-size: 10px; */
+		text-transform: uppercase;
+		font-weight: 600;
+		letter-spacing: 0.15rem;
+	}
+	
+	header .main-nav li a:hover, header .main-nav li a.active {
+		color: #666;
+	}
+
+
+	
 	div.one-half, div.one-third, div.two-third, div.three-fourth, div.one-fourth {
 		margin-left: 0;
 		width: 100%;
@@ -464,4 +577,6 @@ footer .copyright a:hover {
 	#main-content .text-intro h2 {
 		font-size: 30px;
 	}
+
+	
 }
