--- a/styles/style.css
+++ b/styles/style.css
@@ -134,6 +134,11 @@ header .logo-area {
 	margin-left: 0.7rem;
 }
 
+header .logo-area img {
+	width: 50px;
+	height: 50px;
+}
+
 
 header .main-nav ul {
 	height: 100%;
